k8s/apps/arr-stack/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: arr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain prowlarr.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: arr-stack-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: prowlarr-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
